[iOS] www.wikipedia.org is loading much slower due to FormClient::willBeginInputSession https://bugs.webkit.org/show_bug.cgi?id=132974

Reviewed by Enrica Casucci.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::elementDidFocus): Don’t call FormClient::willBeginInputSession if the
focus isn’t user-initiated, because in that case the UI process will bail out of
-_startAssistingNode:userIsInteracting:userObject: before creating an input session and
calling the -_webView:didStartInputSession:.



Canonical link: https://commits.webkit.org/151023@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168916 268f45cc-cd09-0410-ab3c-d52691b4dbfc